# strava-ical

./: .cookiecutter.json  CONTRIBUTING.md  Justfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yaml  pypi.yaml
.readme.md/: cmdline.md
src/strava_ical/: cli.py  data.py  ical.py  input.py  strava_offline.py
tests/: fixme.md  test_ical.py
tests/readme/: config-sample.md  help.md
