[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "strava-ical"
description = "Generate iCalendar with your Strava activities"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = "MIT"
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">= 3.10"
dependencies = [
    "click ~= 8.0",
    "icalendar >= 5.0.2",
    "platformdirs >= 2.1",
    "python-dateutil >= 2.7",
]

[project.optional-dependencies]
strava = [
    "strava-offline ~= 1.0",
]

[dependency-groups]
dev = [
    "flake8 >= 3.7",
    "isort >= 5.0",
    "mypy >= 1.0",
    "prysk >= 0.20.0",
    "pytest",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/liskin/strava-ical"
"Release Notes" = "https://github.com/liskin/strava-ical/releases"
"Issues" = "https://github.com/liskin/strava-ical/issues"
"CI" = "https://github.com/liskin/strava-ical/actions"
"Donations (GitHub)" = "https://github.com/sponsors/liskin"
"Donations (PayPal)" = "https://www.paypal.me/lisknisi/5EUR"

[project.scripts]
strava-ical = "strava_ical.cli:cli"
strava-ical-sync = "strava_ical.cli_strava_offline:cli_sqlite [strava]"

[tool.gha-check-distro]
dependencies-apt = [
    "jq",
    "make",
    "python3-bottle",
    "python3-click",
    "python3-click-option-group",
    "python3-configobj",
    "python3-dateutil",
    "python3-flake8",
    "python3-icalendar",
    "python3-isort",
    "python3-mypy",
    "python3-oauthlib",
    "python3-pip",
    "python3-platformdirs",
    "python3-pytest",
    "python3-requests-oauthlib",
    "python3-tabulate",
    "python3-typeshed",
    "python3-venv",
    "python3-yaml",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
